--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,16 +1,20 @@
 modules:
+  Dummy:
+    client: ${LABSTOR_BUILD_DIR}/modules/dummy/libdummy_client.so
+    server: ${LABSTOR_BUILD_DIR}/modules/dummy/libdummy_server.so
   BlkdevTable:
     client: ${LABSTOR_BUILD_DIR}/modules/kernel/blkdev_table/libblkdev_table_client.so
     server: ${LABSTOR_BUILD_DIR}/modules/kernel/blkdev_table/libblkdev_table_server.so
 work_orchestrator:
   time_slice_us: 1000
+  work_queue_depth: 128
   policy: round-robin
   kernel_workers:
-    - {worker_id: 1, cpu_id: 1}
-    - {worker_id: 2, cpu_id: 2}
+    - {worker_id: 0, cpu_id: 1}
+    - {worker_id: 1, cpu_id: 2}
   server_workers:
-    - {worker_id: 1, cpu_id: 3}
-    - {worker_id: 2, cpu_id: 4}
+    - {worker_id: 0, cpu_id: 3}
+    - {worker_id: 1, cpu_id: 4}
 ipc_manager:
   pid_to_ipc_size_mb: 2
   qps_by_id_size_mb: 2
