--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -11,8 +11,10 @@ add_subdirectory(kernel/ipc_manager)
 add_subdirectory(kernel/blkdev_table)
 add_subdirectory(kernel/work_orchestrator)
 add_subdirectory(registrar)
+add_subdirectory(dummy)
 add_custom_target(clean_modules COMMAND
         cd ${CMAKE_BINARY_DIR} && make clean &&
+        cd ${CMAKE_BINARY_DIR} && make clean_dummy &&
         cd ${CMAKE_BINARY_DIR} && make clean_labstor_kernel_server &&
         cd ${CMAKE_BINARY_DIR} && make clean_secure_shmem &&
         cd ${CMAKE_BINARY_DIR} && make clean_ipc_manager &&
