--- a/config/config.yaml
+++ b/config/config.yaml
@@ -28,10 +28,10 @@ ipc_manager:
   kernel_queue_size_kb: 4
   kernel_request_unit_bytes: 64
 
-  internal_mem_mb: 2
-  num_internal_queues: 8
-  internal_queue_size_kb: 4
-  internal_request_unit_bytes: 128
+  private_mem_mb: 2
+  num_private_queues: 8
+  private_queue_size_kb: 4
+  private_request_unit_bytes: 128
 
 namespace:
   max_entries: 1024
