--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,6 +5,9 @@ modules:
   BlkdevTable:
     client: ${LABSTOR_BUILD_DIR}/modules/kernel/blkdev_table/libblkdev_table_client.so
     server: ${LABSTOR_BUILD_DIR}/modules/kernel/blkdev_table/libblkdev_table_server.so
+  MQDriver:
+    client: ${LABSTOR_BUILD_DIR}/modules/kernel/mq_driver/libmq_driver_client.so
+    server: ${LABSTOR_BUILD_DIR}/modules/kernel/mq_driver/libmq_driver_server.so
 work_orchestrator:
   time_slice_us: 1000
   work_queue_depth: 128
