--- a/modules/kernel/mq_driver/kernel/Makefile
+++ b/modules/kernel/mq_driver/kernel/Makefile
@@ -3,7 +3,7 @@ LABSTOR_INCLUDE=$(CMAKE_SOURCE_DIR)/include
 LABSTOR_MODULES=$(CMAKE_SOURCE_DIR)/modules/kernel
 BLKDEV_TABLE=$(LABSTOR_MODULES)/blkdev_table/kernel
 
-EXTRA_CFLAGS=-I$(LABSTOR_KERNEL_SERVER) -I$(LABSTOR_INCLUDE) -I$(LABSTOR_MODULES) -DKERNEL_BUILD -Wno-missing-braces -DDEBUG
+EXTRA_CFLAGS=-I$(LABSTOR_KERNEL_SERVER) -I$(LABSTOR_INCLUDE) -I$(LABSTOR_MODULES) -DKERNEL_BUILD -Wno-missing-braces# -DDEBUG
 KBUILD_EXTRA_SYMBOLS += $(LABSTOR_KERNEL_SERVER)/Module.symvers $(BLKDEV_TABLE)/Module.symvers
 obj-m = mq_driver.o
 mq_driver-objs += mq_driver_kernel.o
