--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,31 +18,32 @@ work_orchestrator:
   kernel_workers:
     - {worker_id: 0, cpu_id: 0}
   server_workers:
-    - {worker_id: 0, cpu_id: 1}
-    - {worker_id: 1, cpu_id: 2}
-    - {worker_id: 2, cpu_id: 3}
-    - {worker_id: 3, cpu_id: 4}
-    - {worker_id: 4, cpu_id: 5}
-    - {worker_id: 5, cpu_id: 6}
+    - {worker_id: 0, cpu_id: 2}
 ipc_manager:
   pid_to_ipc_size_mb: 2
   qps_by_id_size_mb: 2
   max_collisions: 64
 
-  client_shmem_kb: 64
-  num_client_queues: 48
-  client_request_unit_bytes: 64
-  client_queue_depth: 32
+  client:
+    max_region_size_kb: 64
+    num_queues: 1
+    queue_depth: 100
+    request_unit_bytes: 64
+    min_request_region_kb: 32
 
-  kernel_shmem_mb: 1
-  num_kernel_queues: 48
-  kernel_queue_depth: 32
-  kernel_request_unit_bytes: 64
+  kernel:
+    max_region_size_kb: 1024
+    num_queues: 1
+    queue_depth: 1024
+    request_unit_bytes: 64
+    min_request_region_kb: 500
 
-  private_mem_mb: 2
-  num_private_queues: 48
-  private_queue_depth: 32
-  private_request_unit_bytes: 64
+  private:
+    max_region_size_kb: 1024
+    num_queues: 1
+    queue_depth: 1024
+    request_unit_bytes: 64
+    min_request_region_kb: 500
 
 namespace:
   max_entries: 1024
