--- a/test/performance/CMakeLists.txt
+++ b/test/performance/CMakeLists.txt
@@ -24,3 +24,11 @@ add_executable(test_server_thrpt_exec server_thrpt/test.cpp)
 add_dependencies(test_server_thrpt_exec labstor_client_library ipc_test_client)
 target_compile_options(test_server_thrpt_exec PUBLIC "${OpenMP_CXX_FLAGS}")
 target_link_libraries(test_server_thrpt_exec labstor_client_library ipc_test_client "${OpenMP_CXX_FLAGS}")
+
+#Chrono
+add_executable(test_chrono_exec chrono/test.cpp)
+
+#SHMEM latency
+add_executable(test_shmem_latency shmem/test.cpp)
+target_compile_options(test_shmem_latency PUBLIC "${OpenMP_CXX_FLAGS}")
+target_link_libraries(test_shmem_latency labstor_client_library ipc_test_client "${OpenMP_CXX_FLAGS}")
