--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -5,15 +5,13 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(include kernel io_systems)
 
-######MODULES
+##MODULES WITH KERNEL COMPONENT
 add_subdirectory(kernel/secure_shmem)
 add_subdirectory(kernel/ipc_manager)
 add_subdirectory(kernel/work_orchestrator)
 add_subdirectory(kernel/blkdev_table)
 add_subdirectory(kernel/mq_driver)
 add_subdirectory(kernel/ipc_test)
-add_subdirectory(registrar)
-add_subdirectory(dummy)
 add_custom_target(clean_modules COMMAND
         cd ${CMAKE_BINARY_DIR} && make clean &&
         cd ${CMAKE_BINARY_DIR} && make clean_labstor_kernel_server &&
@@ -23,3 +21,8 @@ add_custom_target(clean_modules COMMAND
         cd ${CMAKE_BINARY_DIR} && make clean_blkdev_table &&
         cd ${CMAKE_BINARY_DIR} && make clean_mq_driver &&
         cd ${CMAKE_BINARY_DIR} && make clean_work_orchestrator)
+
+######MODULES
+add_subdirectory(registrar)
+add_subdirectory(dummy)
+add_subdirectory(filesystems/generic_posix)
