Add io test. Fix some repo inconsistency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,9 +91,9 @@ add_custom_target(stop_kernel_server_test COMMAND LABSTOR_ROOT=${CMAKE_SOURCE_DI
 
 add_executable(partitioner util/partitioner.cpp)
 
-add_executable(mount util/labstor_mount.cpp)
-add_dependencies(mount labstor_client_library)
-target_link_libraries(mount labstor_client_library)
+#add_executable(mount util/labstor_mount.cpp)
+#add_dependencies(mount labstor_client_library)
+#target_link_libraries(mount labstor_client_library)
 
 ######MODULES & TESTS
 add_subdirectory(modules)
