--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,3 +98,4 @@ add_executable(partitioner util/partitioner.cpp)
 ######MODULES & TESTS
 add_subdirectory(modules)
 add_subdirectory(test)
+add_subdirectory(benchmark)
