--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -15,7 +15,7 @@ target_link_libraries(test_usr_usr_ipc_thrpt labstor_client_library ipc_test_cli
 add_executable(test_io_thrpt src/io_thrpt/test.cpp)
 target_compile_options(test_io_thrpt PUBLIC "${OpenMP_CXX_FLAGS}")
 add_dependencies(test_io_thrpt labstor_client_library mq_driver_client blkdev_table_client)
-target_link_libraries(test_io_thrpt labstor_client_library mq_driver_client blkdev_table_client "${OpenMP_CXX_FLAGS}" rt uring)
+target_link_libraries(test_io_thrpt labstor_client_library mq_driver_client blkdev_table_client "${OpenMP_CXX_FLAGS}" rt uring aio)
 
 #IO Uring probe
 add_executable(probe_uring src/io_thrpt/probe.cpp)
