--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,12 +12,12 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 if(${CMAKE_BUILD_TYPE} STREQUAL Debug)
-    set(CMAKE_C_FLAGS "-g -fPIC -DLABSTOR_DEBUG")
-    set(CMAKE_CXX_FLAGS "-g -fPIC -DLABSTOR_DEBUG")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fPIC -DLABSTOR_DEBUG")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fPIC -DLABSTOR_DEBUG")
     message("Debug mode")
 else()
-    set(CMAKE_C_FLAGS "-g -fPIC -Ofast")
-    set(CMAKE_CXX_FLAGS "-g -fPIC -Ofast")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fPIC -Ofast")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fPIC -Ofast")
     message("Optimized mode")
 endif()
 option(BUILD_SHARED_LIBS "Build shared libraries (.dll/.so) instead of static ones (.lib/.a)" ON)
@@ -98,4 +98,4 @@ add_executable(partitioner util/partitioner.cpp)
 ######MODULES & TESTS
 add_subdirectory(modules)
 add_subdirectory(test)
-#add_subdirectory(benchmark)
+add_subdirectory(benchmark)
