--- a/modules/kernel/mq_driver/CMakeLists.txt
+++ b/modules/kernel/mq_driver/CMakeLists.txt
@@ -40,3 +40,7 @@ if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/server)
     add_dependencies(${MODULE_NAME}_server labstor_server_library)
     target_link_libraries(${MODULE_NAME}_server labstor_server_library)
 endif()
+
+add_executable(${MODULE_NAME}_register util/register.cpp)
+add_dependencies(${MODULE_NAME}_register labstor_client_library ${MODULE_NAME}_client)
+target_link_libraries(${MODULE_NAME}_register labstor_client_library ${MODULE_NAME}_client)
