--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,10 @@ if(${CMAKE_BUILD_TYPE} STREQUAL Debug)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fPIC -DLABSTOR_DEBUG")
     message("Debug mode")
 else()
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fPIC -Ofast")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fPIC -Ofast")
+    #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fPIC -Ofast")
+    #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fPIC -Ofast")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fPIC")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fPIC")
     message("Optimized mode")
 endif()
 option(BUILD_SHARED_LIBS "Build shared libraries (.dll/.so) instead of static ones (.lib/.a)" ON)
