Allow different queue types

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -18,14 +18,15 @@ target_link_libraries(test_usr_usr_ipc_thrpt labstor_client_library ipc_test_cli
 #IO throughput
 add_executable(test_io_thrpt src/io_thrpt/test.cpp)
 target_compile_options(test_io_thrpt PUBLIC "${OpenMP_CXX_FLAGS}")
-add_dependencies(test_io_thrpt labstor_client_library mq_driver_client blkdev_table_client spdk_nvme_lib)
+#add_dependencies(test_io_thrpt labstor_client_library mq_driver_client blkdev_table_client spdk_nvme_lib)
+add_dependencies(test_io_thrpt labstor_client_library mq_driver_client blkdev_table_client)
 target_link_libraries(test_io_thrpt
         labstor_client_library
         mq_driver_client
         blkdev_table_client
         "${OpenMP_CXX_FLAGS}"
-        uring aio
-        spdk_nvme_lib ${SPDK_DYN_LIBS})
+        uring aio)
+        #spdk_nvme_lib ${SPDK_DYN_LIBS})
 #https://spdk.io/doc/pkgconfig.html
 
 #IO Uring probe
