PossibleFlags + 1 in RegisterQPType, SPDK test reaches I/O

--- a/modules/iosched/spdk/CMakeLists.txt
+++ b/modules/iosched/spdk/CMakeLists.txt
@@ -58,27 +58,24 @@ if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/lib)
             -lcrypto -lm -laio)
     target_compile_options(spdk_nvme_lib PUBLIC ${SPDK_COMPILE_OPTS})
     target_link_options(spdk_nvme_lib PUBLIC ${SPDK_LINK_OPTS})
-    set(SPDK_DYN_LIBS -lnuma -ldl -pthread -lrt -luuid -lcrypto -lm -laio)
-
-    add_library(${MODULE_NAME}_lib lib/${MODULE_NAME}_lib.cpp)
-    add_dependencies(${MODULE_NAME}_lib spdk_nvme_lib)
-    target_link_libraries(${MODULE_NAME}_lib ${SPDK_DYN_LIBS} spdk_nvme_lib)
+    set(SPDK_DEPS spdk_nvme_lib spdk_client)
+    set(SPDK_LIBS -lnuma -ldl -pthread -lrt -luuid -lcrypto -lm -laio spdk_nvme_lib spdk_client)
 endif()
 
 #BUILD USERSPACE CLIENT
-if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/client2)
+if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/client)
     add_library(${MODULE_NAME}_client client/${MODULE_NAME}_client.cpp)
     add_dependencies(${MODULE_NAME}_client labstor_client_library)
-    target_link_libraries(${MODULE_NAME}_client labstor_client_library ${MODULE_NAME}_lib ${SPDK_DYN_LIBS} spdk_nvme_lib)
+    target_link_libraries(${MODULE_NAME}_client labstor_client_library)
 endif()
 
 #BUILD USERSPACE SERVER
-if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/server2)
+if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/server)
     add_library(${MODULE_NAME}_server server/${MODULE_NAME}_server.cpp)
     add_dependencies(${MODULE_NAME}_server labstor_server_library)
-    target_link_libraries(${MODULE_NAME}_server labstor_server_library ${MODULE_NAME}_lib ${SPDK_DYN_LIBS} spdk_nvme_lib)
+    target_link_libraries(${MODULE_NAME}_server labstor_server_library)
 endif()
 
 add_executable(spdk_probe util/probe.cpp)
-add_dependencies(spdk_probe spdk_nvme_lib spdk_lib)
-target_link_libraries(spdk_probe ${SPDK_DYN_LIBS} spdk_nvme_lib spdk_lib)
+add_dependencies(spdk_probe labstor_client_library ${SPDK_DEPS})
+target_link_libraries(spdk_probe labstor_client_library ${SPDK_LIBS})
