--- a/modules/filesystems/generic_posix/CMakeLists.txt
+++ b/modules/filesystems/generic_posix/CMakeLists.txt
@@ -4,7 +4,7 @@ project(labstor)
 set(CMAKE_CXX_STANDARD 17)
 
 set(MODULE_NAME generic_posix)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/modules ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/modules ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 
 #BUILD KERNEL MODULE
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/kernel)
