--- a/modules/storage_api/mq_driver/CMakeLists.txt
+++ b/modules/storage_api/mq_driver/CMakeLists.txt
@@ -4,7 +4,7 @@ project(labstor)
 set(CMAKE_CXX_STANDARD 17)
 
 set(MODULE_NAME mq_driver)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/modules/kernel ${CMAKE_SOURCE_DIR}/modules/storage_api)
 
 #BUILD KERNEL MODULE
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/kernel)
