More for BlockFS. Move ns_id to module definition.

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -11,18 +11,20 @@ add_dependencies(test_usr_usr_ipc_thrpt labstor_client_library ipc_test_client)
 target_link_libraries(test_usr_usr_ipc_thrpt labstor_client_library ipc_test_client "${OpenMP_CXX_FLAGS}")
 
 #IO throughput
-add_executable(test_io_thrpt src/io_thrpt/test.cpp)
-target_compile_options(test_io_thrpt PUBLIC "${OpenMP_CXX_FLAGS}")
+#add_executable(test_io_thrpt src/io_thrpt/test.cpp)
+#target_compile_options(test_io_thrpt PUBLIC "${OpenMP_CXX_FLAGS}")
 #add_dependencies(test_io_thrpt labstor_client_library mq_driver_client blkdev_table_client spdk_nvme_lib)
-add_dependencies(test_io_thrpt labstor_client_library mq_driver_client blkdev_table_client)
-target_link_libraries(test_io_thrpt
-        labstor_client_library
-        mq_driver_client
-        blkdev_table_client
-        "${OpenMP_CXX_FLAGS}"
-        uring aio)
+#add_dependencies(test_io_thrpt labstor_client_library mq_driver_client blkdev_table_client)
+#target_link_libraries(test_io_thrpt
+#        labstor_client_library
+#        mq_driver_client
+#        blkdev_table_client
+#        "${OpenMP_CXX_FLAGS}"
+#        uring aio)
         #spdk_nvme_lib ${SPDK_DYN_LIBS})
 #https://spdk.io/doc/pkgconfig.html
+
+add_executable(labfs_md_emu src/md/metadata.cpp)
 
 #MD Throughput
 add_executable(test_md_thrpt src/posix_md/posix.cpp)
