--- a/labmods/storage_api/mq_driver/CMakeLists.txt
+++ b/labmods/storage_api/mq_driver/CMakeLists.txt
@@ -41,6 +41,6 @@ if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/server)
     target_link_libraries(${MODULE_NAME}_server labstor_server_library)
 endif()
 
-add_executable(${MODULE_NAME}_register util/register.cpp)
-add_dependencies(${MODULE_NAME}_register labstor_client_library ${MODULE_NAME}_client)
-target_link_libraries(${MODULE_NAME}_register labstor_client_library ${MODULE_NAME}_client)
+add_executable(mount.${MODULE_NAME} util/mount.mq_driver.cpp)
+add_dependencies(mount.${MODULE_NAME} labstor_client_library ${MODULE_NAME}_client blkdev_table_client)
+target_link_libraries(mount.${MODULE_NAME} labstor_client_library ${MODULE_NAME}_client blkdev_table_client)
