--- a/labmods/kernel/blkdev_table/kernel/Makefile
+++ b/labmods/kernel/blkdev_table/kernel/Makefile
@@ -1,6 +1,6 @@
 LABSTOR_KERNEL_SERVER=$(CMAKE_SOURCE_DIR)/src/kernel/server
 LABSTOR_INCLUDE=$(CMAKE_SOURCE_DIR)/include
-LABSTOR_MODULES=$(CMAKE_SOURCE_DIR)/labmods/kernel
+LABSTOR_MODULES=$(CMAKE_SOURCE_DIR)
 
 EXTRA_CFLAGS=-I$(LABSTOR_KERNEL_SERVER) -I$(LABSTOR_INCLUDE) -I$(LABSTOR_MODULES) -DKERNEL_BUILD -Wno-missing-braces# -DDEBUG
 KBUILD_EXTRA_SYMBOLS += $(LABSTOR_KERNEL_SERVER)/Module.symvers
