--- a/benchmark/config.ini
+++ b/benchmark/config.ini
@@ -3,4 +3,8 @@ HDD_PATH=/dev/sda1
 SSD_PATH=/dev/sdc1
 NVME_PATH=/dev/nvme0n1
 PMEM_PATH=/dev/pmem0
-MOUNT_POINT=~/mount
+LOG_DIR=${HOME}/labstor_tests
+MOUNT_POINT=${HOME}/mount
+
+[YCSB]
+YCSB_DIR=${HOME}/scspkg/packages/YCSB/src/YCSB
