--- a/test/performance/CMakeLists.txt
+++ b/test/performance/CMakeLists.txt
@@ -30,3 +30,27 @@ add_executable(test_shmem_latency shmem/test.cpp)
 target_compile_options(test_shmem_latency PUBLIC "${OpenMP_CXX_FLAGS}")
 add_dependencies(test_shmem_latency labstor_client_library ipc_test_client)
 target_link_libraries(test_shmem_latency labstor_client_library ipc_test_client "${OpenMP_CXX_FLAGS}")
+
+#Md thrpt
+add_executable(labfs_md_emu md_thrpt/labfs.cpp)
+add_executable(test_md_thrpt md_thrpt/posix.cpp)
+
+#SHMEM latency
+add_executable(test_usr_usr_ipc_thrpt ipc_thrpt/test_ipc_thrpt.cpp)
+target_compile_options(test_usr_usr_ipc_thrpt PUBLIC "${OpenMP_CXX_FLAGS}")
+add_dependencies(test_usr_usr_ipc_thrpt labstor_client_library ipc_test_client)
+target_link_libraries(test_usr_usr_ipc_thrpt labstor_client_library ipc_test_client "${OpenMP_CXX_FLAGS}")
+
+#IO throughput
+#add_executable(test_io_thrpt src/io_thrpt/test.cpp)
+#target_compile_options(test_io_thrpt PUBLIC "${OpenMP_CXX_FLAGS}")
+#add_dependencies(test_io_thrpt labstor_client_library mq_driver_client blkdev_table_client spdk_nvme_lib)
+#add_dependencies(test_io_thrpt labstor_client_library mq_driver_client blkdev_table_client)
+#target_link_libraries(test_io_thrpt
+#        labstor_client_library
+#        mq_driver_client
+#        blkdev_table_client
+#        "${OpenMP_CXX_FLAGS}"
+#        uring aio)
+#spdk_nvme_lib ${SPDK_DYN_LIBS})
+#https://spdk.io/doc/pkgconfig.html
