Modify benchmark pipeline structure

--- a/labmods/CMakeLists.txt
+++ b/labmods/CMakeLists.txt
@@ -34,8 +34,7 @@ add_subdirectory(no_op)
 add_subdirectory(registrar)
 #add_subdirectory(time_keeper)
 
-message("Are we with SPDK?")
 if(${SPDK_BUILD_DIR})
-    messsage("We are with it")
+    messsage("Building SPDK")
     add_subdirectory(spdk)
 endif()
